# spotify-routines

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cmds.md  compose.override.yml  compose.yml  create_top_songs_playlist.py  get_new_albums.Dockerfile  get_new_albums.py  main.py  new_albums.py  pyproject.toml  requirements.txt  routine_get_new_albums.py  routine_update_release_radar.py  routine_update_top_songs_playlists.py  spotify.bat  update_release_radar.Dockerfile  update_release_radar.py  update_top_songs.Dockerfile  utils.py
.github/workflows/: deploy-get-new-albums.yml  deploy-update-release-radar.yml  deploy-update-top-songs.yml  deploy.yml
app/: config.py  create_top_songs_playlist.py  logging.yaml  utils.py
app/routines/: get_new_albums.py  update_release_radar.py  update_top_songs.py
app/spotify/: client.py
spotify/: client.py  refresh.py  utils.py
spotify_module/: __init__.py  refresh.py  spotify_class.py
src/: config.py  create_top_songs_playlist.py
src/jobs/: like_new_albums.py  update_release_radar.py  update_top_songs.py
src/lib/: client.py  email.py  logger.py  refresh.py  timer.py  utils.py
