[tool.poetry]
name = "spotify-routines"
version = "0.1.0"
description = ""
authors = ["Izem0 <izem.mangione@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
backoff = "^2.2.1"
json2html = "^1.3.0"
prettytable = "^3.10.0"
pyyaml = "^6.0.1"
pydantic-settings = "^2.2.1"
pydantic = {extras = ["email"], version = "^2.7.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
