[project]
name = "spotify-routines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "jmespath>=1.1.0",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "requests>=2.32.5",
    "spotipy>=2.26.0",
]
